giochannel: Add an out annotation for g_io_channel_read_unichar()

Since it's an output variable.

https://bugzilla.gnome.org/show_bug.cgi?id=704165